<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_top_info"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        app:layout_constraintTop_toTopOf="parent"
        >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="center"
        android:orientation="horizontal"
        style="@style/TextStyle_MainActivity_top"
        app:layout_constraintTop_toTopOf="@id/cl_top_info">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:layout_weight="1"
            android:gravity="center"
            android:shadowDx="1"
            android:shadowDy="1"
            android:shadowColor="@color/shadowColor"
            android:shadowRadius="1"
            android:textColor="@android:color/white"
            android:text="@string/textView_AllUsers" />

        <TextView
            android:id="@+id/textView_allUsers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:layout_weight="1"
            android:shadowDx="1"
            android:shadowDy="1"
            android:shadowColor="@color/shadowColor"
            android:shadowRadius="1"
            android:textColor="@android:color/white"
            android:gravity="center" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:layout_weight="1"
            android:shadowDx="1"
            android:shadowDy="1"
            android:shadowColor="@color/shadowColor"
            android:shadowRadius="1"
            android:textColor="@android:color/white"
            android:gravity="center"
            android:text="@string/textView_UsersIzbrannoe"/>

        <TextView
            android:id="@+id/textView_favoriteUsers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:gravity="center"
            android:shadowDx="1"
            android:shadowDy="1"
            android:shadowColor="@color/shadowColor"
            android:shadowRadius="1"
            android:textColor="@android:color/white"
            android:layout_weight="1" />

        <ImageView
            android:id="@+id/imageView_izbrannoe_menu"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:shadowDx="1"
            android:shadowDy="1"
            android:shadowColor="@color/shadowColor"
            android:shadowRadius="1"
            android:src="@drawable/star_fav"
            />

    </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/bt_add_contact"
        app:layout_constraintTop_toBottomOf="@id/cl_top_info">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/container_list_contact"

            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>


    <Button
        android:id="@+id/bt_add_contact"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:backgroundTint="#F83BA889"
        style="@style/TextStyle_white_shadow"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/bt_add_contact"
        android:textAllCaps="false" />

</androidx.constraintlayout.widget.ConstraintLayout>
